# skill-hub-manager

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  installation.md  installation.zh-CN.md  migration.md  profiles.md  quick-start.md  security.md
docs/schema/: json-output.md
docs/specs/: 2026-06-25-skill-hub-manager-design.md  2026-06-30-installer-skill-design.md
docs/superpowers/plans/: 2026-06-26-cli-mvp.md
examples/: registry.example.yaml
examples/profiles/: global.example.yaml  project-a.example.yaml
skills/install-skill-hub/: SKILL.md
skills/install-skill-hub/agents/: openai.yaml
skills/install-skill-hub/scripts/: detect_target.py  install_skill_hub.py
skills/self-installer/: SKILL.md
skills/self-installer/agents/: openai.yaml
skills/self-installer/scripts/: install_manager.py
skills/skill-installer/: SKILL.md
skills/skill-installer/agents/: openai.yaml
skills/skill-installer/scripts/: install_skill.py
src/skill_hub_manager/: agents.py  audit.py  cli.py  doctor.py  importer.py  install_state.py  installer_bootstrap.py  paths.py  profiles.py  registry.py  skills.py  source_state.py  state_io.py  sync.py  validation.py
tests/: test_agents.py  test_audit.py  test_cli.py  test_doctor.py  test_install_state.py  test_installer_bootstrap.py  test_paths.py  test_profiles.py  test_registry.py  test_registry_query.py  test_skill_installer_script.py  test_skill_lifecycle.py  test_skills.py  test_sync.py
